# tidyboard

./: .dockerignore  .env.example  .env.local.example  .gitignore  AGENTS.md  AWS_DEPLOYMENT.md  BACKEND_STATUS.md  BILLING.md  CHANGELOG.md  CONTRIBUTING.md  Caddyfile.local  DEPLOYMENT.md  Dockerfile  Dockerfile.migrator  FEATURES.md  LOAD_TESTING.md  Makefile  OAUTH.md  PRODUCTION_HARDENING.md  README.md  SPEC_GAPS_V3.md  STORAGE.md  config.example.yaml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  sqlc.yaml
.codesight/: CODESIGHT.md  components.md  config.md  coverage.md  graph.md  libs.md  middleware.md  routes.md  schema.md
.github/: dependabot.yml  pull_request_template.md
docs/: README.md
loadtest/: README.md  auth.js  events.js  load.js  smoke.js  soak.js  spike.js  stress.js
migrations/: 20260423000001_init_accounts.sql  20260423000002_init_households.sql  20260423000003_init_members.sql  20260423000004_init_events.sql  20260423000005_init_lists.sql  20260423000006_init_recipes.sql  20260423000007_init_audit.sql  20260423000008_init_calendars_caldav.sql  20260423000011_subscriptions.sql  20260423000012_oauth_tokens.sql  20260424000001_backup_s3_key.sql  20260425000001_drop_oauth_tokens.sql  20260425000010_meal_plan.sql  20260425000020_shopping.sql  20260425000030_equity.sql  20260426000010_recipe_collections.sql  20260426000020_ntfy_topic.sql  20260426000030_routines.sql  20260427000010_chore_wallet.sql  (+10 more)
services/recipe-scraper/: .env.example  Dockerfile  pyproject.toml  requirements.txt
services/recipe-scraper/src/recipe_scraper/: __init__.py  clock.py  config.py  logging_config.py  main.py  normalize.py  scraper.py
services/recipe-scraper/tests/: conftest.py  test_normalize.py  test_scraper.py
services/sync-worker/: .env.example  Dockerfile  pyproject.toml  requirements.txt
services/sync-worker/src/sync_worker/: __init__.py  caldav_client.py  config.py  ical_client.py  logging_config.py  main.py  rrule_expand.py  sync.py
services/sync-worker/tests/: conftest.py  test_ical_client.py  test_rrule_expand.py  test_sync.py
(+781 files in other folders)
